--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -1,76 +1,113 @@
-.weather{
-    place-self: center;
-    padding: 40px;
-    border-radius: 10px;
-    background-image: linear-gradient(45deg, #16398f, #d49b9b);
-    display: flex;
-    flex-direction: column;
-    align-items: center;    
-}
+    .weather {
+        place-self: center;
+        padding: 40px;
+        border-radius: 10px;
+        background-image: linear-gradient(45deg, #16398f, #d49b9b);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
-.search-bar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-}
+    .search-bar{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 12px;
+    }
 
-.search-bar input{
-    height: 50px;
-    border:none;
-    outline: none;
-    border-radius: 40px;
-    padding-left: 25px;
-    color: #626262;
-    background: #ebfffc;
-    font-size: 18px;
-}
+    .search-bar input{
+        height: 50px;
+        border:none;
+        outline: none;
+        border-radius: 40px;
+        padding-left: 25px;
+        color: #626262;
+        background: #ebfffc;
+        font-size: 18px;
+    }
 
-.search-bar img {
-    width: 50px;
-    padding: 15px;
-    border-radius: 50%;
-    background: #ebfffc;
-    cursor: pointer;
-}
+    .search-bar img {
+        width: 50px;
+        padding: 15px;
+        border-radius: 50%;
+        background: #ebfffc;
+        cursor: pointer;
+    }
 
-.weather-icon{
-    width: 150px;
-    margin: 30ox, 0;
-}
+    .weather-icon{
+        width: 150px;
+        margin: 30ox, 0;
+    }
 
-.temperature{
-    font-size: 80px;    
-    color: #fff;
-    line-height: 1;
-}
+    .temperature{
+        font-size: 80px;    
+        color: #fff;
+        line-height: 1;
+    }
 
-.location{
-    font-size: 40px;
-    color: #fff;
-}
+    .location{
+        font-size: 40px;
+        color: #fff;
+    }
 
-.weather-data{
-    width: 100%;
-    margin-top: 40px;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-}
+    .weather-data{
+        width: 100%;
+        margin-top: 40px;
+        color: #fff;
+        display: flex;
+        justify-content: space-between;
+    }
 
-.weather-data .col{
-    display: flex;
-    align-items: flex-start;
-    gap:12px;
-    font-size: 22px;
-}
+    .weather-data .col{
+        display: flex;
+        align-items: flex-start;
+        gap:12px;
+        font-size: 22px;
+    }
 
-.weather-data .col span{
-    display: block;
-    font-size: 16px;
-}
+    .weather-data .col span{
+        display: block;
+        font-size: 16px;
+    }
 
-.weather-data .col img{
-    width: 26px;
-    margin-top: 10px;
-}
+    .weather-data .col img{
+        width: 26px;
+        margin-top: 10px;
+    }
+
+    /* Media Queries */
+    @media screen and (max-width: 768px) {
+        .weather {
+            padding: 20px;
+        }
+
+        .temperature {
+            font-size: 60px;
+        }
+
+        .location {
+            font-size: 30px;
+        }
+
+        .weather-data .col {
+            font-size: 18px;
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        .weather {
+            padding: 10px;
+        }
+
+        .temperature {
+            font-size: 40px;
+        }
+
+        .location {
+            font-size: 20px;
+        }
+
+        .weather-data .col {
+            font-size: 16px;
+        }
+    }
